--- a/src/index.scss
+++ b/src/index.scss
@@ -1,18 +1,8 @@
-header {
-  margin: 32px;
-}
-
-main {
-  margin: 32px;
-}
-
-footer {
-  margin: 32px;
-}
-
-.login-link {
-  display: block;
-  float: right;
-  padding: 4px;
-}
-
+@import url('~normalize.css');
+// NOTE: We're using a `.bp-` namespace to indicate these are the boilerplate
+// styles.
+@import './scss/_settings';
+@import './scss/_type';
+@import './scss/_layout';
+@import './scss/_welcome';
+@import './scss/_widgets';
