Fixes docs link

--- a/modules/@apostrophecms/home-page/views/page.html
+++ b/modules/@apostrophecms/home-page/views/page.html
@@ -16,7 +16,7 @@
       </p>
     {% endif %}
     <p>
-      For a guide on how to configure and customize this project, <a href="https://a3-docs.apostrophecms.org/">please check out the Apostrophe 3 documentation</a>.
+      For a guide on how to configure and customize this project, <a href="https://a3-docs.apos.dev/">please check out the Apostrophe 3 documentation</a>.
     </p>
     <h2>Essential Links</h2>
     <ul class="bp-welcome__links">
