--- a/modules/@apostrophecms/home-page/views/page.html
+++ b/modules/@apostrophecms/home-page/views/page.html
@@ -7,24 +7,31 @@
 
 {% block main %}
   <section class="bp-welcome">
-    <img class="bp-welcome__logo" src="/images/logo.png" alt="ApostropheCMS logo">
-    <h1>Welcome to Apostrophe 3 - alpha</h1>
+    <div class="bp-welcome__verson-wrapper">
+      <span class="bp-welcome__version">alpha</span>
+    </div>
+    <h1 class="bp-welcome__headline">
+      Welcome to Apostrophe 3
+    </h1>
     {% if not data.user %}
       {# Message only for logged out users. #}
+      <h3 class="bp-welcome__help">First time spinning up the ApostropheCMS 3 demo?</h3>
       <p>
-        <strong>First time spinning up the ApostropheCMS 3 demo?</strong> Run this in your CLI to create your first user: <code>node app @apostrophecms/user:add admin admin</code>. <a href="/login">Then log in here</a>.
+        Run this in your CLI to create your first user:
+      </p>
+      <pre class="bp-welcome__code">
+        <span class="bp-welcome__code__context">Command Line</span>
+        <code>
+          node app @apostrophecms/user:add myUsername admin
+        </code>
+      </pre>
+      <p class="bp-welcome__cta">
+        <a class="bp-button bp-button--cta" href="/login">Then log in here</a>
       </p>
     {% endif %}
     <p>
       For a guide on how to configure and customize this project, <a href="https://a3-docs.apos.dev/">please check out the Apostrophe 3 documentation</a>.
     </p>
-    <h2>Essential Links</h2>
-    <ul class="bp-welcome__links">
-      <li><a href="https://chat.apostrophecms.com/" target="_blank">Discord</a></li>
-      <li><a href="https://github.com/apostrophecms/apostrophe/tree/3.0" target="_blank">Github (3.0 branch)</a></li>
-      <li><a href="https://twitter.com/apostrophecms" target="_blank">Twitter</a></li>
-      <li><a href="https://forum.apostrophecms.org" target="_blank">Forum</a></li>
-    </ul>
     <div class="bp-welcome__area">
       {% if data.user %}
         {# Message only for logged in users. #}
