--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -27,13 +27,33 @@ main,
   max-width: 800px;
   margin-left: auto;
   margin-right: auto;
-  padding: 20px;
 }
 
 .bp-header {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
+  margin-bottom: 10px;
+  padding: 40px 0;
+}
+
+.bp-footer {
+  padding: 40px 0;
+}
+
+.bp-header__logo {
+  display: block;
+  width: 190px;
+  max-width: 100%;
+  object-fit: contain;
+}
+
+.bp-header__login {
+
+  &:visited {
+    color: white;
+  }
 }
 
 .bp-content {
