--- a/views/layout.html
+++ b/views/layout.html
@@ -40,7 +40,7 @@
   </main>
   <footer class="bp-footer">
     <h3>Essential Links</h3>
-    <ul class="bp-welcome__links">
+    <ul class="bp-footer__links">
       <li><a href="https://apostrophecms.com/" target="_blank">About ApostropheCMS</a></li>
       <li><a href="https://chat.apostrophecms.com/" target="_blank">Discord</a></li>
       <li><a href="https://github.com/apostrophecms/apostrophe/tree/3.0" target="_blank">Github (3.0 branch)</a></li>
