correct link to documentation

--- a/modules/@apostrophecms/home-page/views/page.html
+++ b/modules/@apostrophecms/home-page/views/page.html
@@ -30,7 +30,7 @@
       </p>
     {% endif %}
     <p>
-      For a guide on how to configure and customize this project, <a href="https://a3-docs.apos.dev/">please check out the Apostrophe 3 documentation</a>.
+      For a guide on how to configure and customize this project, <a href="https://a3.docs.apostrophecms.com/">please check out the Apostrophe 3 documentation</a>.
     </p>
     <div class="bp-welcome__area">
       {% if data.user %}
