--- a/src/scss/_widgets.scss
+++ b/src/scss/_widgets.scss
@@ -1,9 +1,7 @@
-.bp-video {
-  display: flex;
-  justify-content: center;
-
+.bp-video-widget {
+  width: 100%;
   iframe {
-    max-width: 100%;
+    width: 100%;
   }
 }
 
