--- a/src/scss/_welcome.scss
+++ b/src/scss/_welcome.scss
@@ -78,3 +78,18 @@ p.bp-welcome__cta {
   text-align: center;
   margin-bottom: 40px;
 }
+
+.bp-mode {
+  display: inline-block;
+  padding: 5px 5px;
+  font-size: 12px;
+  font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace;
+  line-height: 10px;
+  color: black;
+  vertical-align: middle;
+  background-color: white;
+  border-bottom-color: black;
+  border: 1px solid black;
+  border-radius: 6px;
+  box-shadow: inset 0 -1px 0 black;
+}
