load project level JS after apos JS in dev, as it is in production

--- a/views/layout.html
+++ b/views/layout.html
@@ -51,7 +51,7 @@
 </div>{# Close .bp-wrapper #}
 {% endblock %}
 
-{% block extraBody %}
+{% block afterAposScripts %}
   {# For live reload #}
   {% if data.isDev %}
     <script src="http://localhost:9002/wp/site.js"></script>
