--- a/modules/asset/ui/src/scss/_layout.scss
+++ b/modules/asset/ui/src/scss/_layout.scss
@@ -1,23 +1,21 @@
 // Use flex to keep the footer at the bottom.
 body,
-.apos-refreshable,
+[data-apos-refreshable],
 .bp-wrapper {
   display: flex;
   flex-direction: column;
 }
 
-body {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  // Nice system fonts.
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-}
-
-.apos-refreshable,
+[data-apos-refreshable],
 .bp-wrapper,
 main {
   flex-grow: 1;
+}
+
+body {
+  min-height: 100vh;
+  // Nice system fonts.
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 .bp-header,
