doc: add config for Docker Compose

--- a/modules/@apostrophecms/home-page/views/page.html
+++ b/modules/@apostrophecms/home-page/views/page.html
@@ -25,6 +25,15 @@
           node app @apostrophecms/user:add myUsername admin
         </code>
       </pre>
+      <p>
+        If you run Apostrophe app on Docker container, run this instead:
+      </p>
+      <pre class="bp-welcome__code">
+        <span class="bp-welcome__code__context">Command Line</span>
+        <code>
+          docker compose run --rm apos-app node app @apostrophecms/user:add myUsername admin
+        </code>
+      </pre>
       <p class="bp-welcome__cta">
         <a class="bp-button bp-button--cta" href="/login">Then log in here</a>
       </p>
