--- a/modules/@apostrophecms/home-page/views/page.html
+++ b/modules/@apostrophecms/home-page/views/page.html
@@ -14,7 +14,7 @@
       {# Message only for logged out users. #}
       <h3 class="bp-welcome__help">First time spinning up the ApostropheCMS 3 demo?</h3>
       <p>
-        Run this in your CLI to create your first user:
+        Use the credentials created during setup with the CLI tool or create a new user with the CLI command:
       </p>
       <pre class="bp-welcome__code">
         <span class="bp-welcome__code__context">Command Line</span>
