Updates the footer links

--- a/views/layout.html
+++ b/views/layout.html
@@ -36,9 +36,8 @@
     <ul class="bp-footer__links">
       <li><a href="https://apostrophecms.com/" target="_blank">About ApostropheCMS</a></li>
       <li><a href="https://chat.apostrophecms.com/" target="_blank">Discord</a></li>
-      <li><a href="https://github.com/apostrophecms/apostrophe/tree/3.0" target="_blank">Github (3.0 branch)</a></li>
       <li><a href="https://twitter.com/apostrophecms" target="_blank">Twitter</a></li>
-      <li><a href="https://forum.apostrophecms.org" target="_blank">Forum</a></li>
+      <li><a href="https://github.com/apostrophecms/apostrophe/discussions" target="_blank">GitHub Discussions</a></li>
     </ul>
   </footer>
 </div>{# Close .bp-wrapper #}
