--- a/views/layout.html
+++ b/views/layout.html
@@ -1,44 +1,9 @@
 {# Automatically extends the right outer layout and also handles AJAX siutations #}
 {% extends data.outerLayout %}
 
-{% set title = data.piece.title or data.page.title %}
-{% block title %}
-  {{ title }}
-  {% if not title %}
-    {{ apos.log('Looks like you forgot to override the title block in a template that does not have access to an Apostrophe page or piece.') }}
-  {% endif %}
-{% endblock %}
-
-{% block beforeMain %}
-<div class="bp-wrapper">
-  <header class="bp-header">
-    <img class="bp-header__logo" src="/images/logo.png" alt="ApostropheCMS logo">
-    <nav class="bp-nav"></nav>
-    {% if not data.user %}
-      <a class="bp-button bp-header__login" href="/login">Login</a>
-    {% endif %}
-  </header>
-  <main class="bp-main">
-{% endblock %}
-
 {% block main %}
-  {#
-    Usually, your page templates in the @apostrophecms/pages module will override
-    this block. It is safe to assume this is where your page-specific content
-    should go.
-  #}
-{% endblock %}
-
-{% block afterMain %}
-  </main>
-  <footer class="bp-footer">
-    <h3>Essential Links</h3>
-    <ul class="bp-footer__links">
-      <li><a href="https://apostrophecms.com/" target="_blank">About ApostropheCMS</a></li>
-      <li><a href="https://chat.apostrophecms.com/" target="_blank">Discord</a></li>
-      <li><a href="https://twitter.com/apostrophecms" target="_blank">Twitter</a></li>
-      <li><a href="https://github.com/apostrophecms/apostrophe/discussions" target="_blank">GitHub Discussions</a></li>
-    </ul>
-  </footer>
-</div>{# Close .bp-wrapper #}
+  <p>
+    This project is a backend for astro. Leave it running separately and access
+    the astro project's URL for all edits.
+  </p>
 {% endblock %}
