--- a/modules/asset/ui/src/index.scss
+++ b/modules/asset/ui/src/index.scss
@@ -1,4 +1,4 @@
-@import url('~normalize.css');
+@import url('normalize.css');
 // NOTE: We're using a `.bp-` namespace to indicate these are the boilerplate
 // styles.
 @import './scss/_settings';
