--- a/modules/article-page/ui/src/_bg.scss
+++ b/modules/article-page/ui/src/_bg.scss
@@ -1,4 +1,4 @@
 .test-article-page-main {
   font-weight: 300;
-  background: url('/modules/article-page/bg.jpg');
+  background: url('/modules/article-page/public.txt');
 }
