Get back the logo

--- a/views/layout.html
+++ b/views/layout.html
@@ -12,6 +12,8 @@
 {% block beforeMain %}
 <div class="bp-wrapper">
   <header class="bp-header">
+    <img class="bp-header__logo" src="/images/logo.png" alt="ApostropheCMS logo">
+    <nav class="bp-nav"></nav>
     {% if not data.user %}
       <a class="bp-button bp-header__login" href="/login">Login</a>
     {% endif %}
