Tailwind integration guide and example

--- a/modules/@apostrophecms/home-page/views/page.html
+++ b/modules/@apostrophecms/home-page/views/page.html
@@ -10,6 +10,14 @@
     <h1 class="bp-welcome__headline">
       Welcome to Apostrophe 3
     </h1>
+    <div class="text-center">
+      <span
+        class="box-decoration-clone bg-gradient-to-r from-indigo-600 to-pink-500 text-white px-2 leading-3"
+      >
+        Hello World <br />
+        From Tailwind CSS
+      </span>
+    </div>
     {% if not data.user %}
       {# Message only for logged out users. #}
       <h3 class="bp-welcome__help">First time spinning up the ApostropheCMS 3 demo?</h3>
