--- a/modules/asset/ui/src/index.scss
+++ b/modules/asset/ui/src/index.scss
@@ -7,3 +7,5 @@
 @import './scss/_welcome';
 @import './scss/_nav';
 @import './scss/_widgets';
+// Counter apps global styles
+@import './scss/_apps';
