--- a/modules/counter-page/views/page.html
+++ b/modules/counter-page/views/page.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block main %}
-  <div id="react-app" data-title="{{data.page.title}}"></div>
+  {% area data.page, 'main' %} 
 {% endblock %}
 
 
