Apos, Vite and friends demo

--- a/modules/asset/ui/src/scss/_layout.scss
+++ b/modules/asset/ui/src/scss/_layout.scss
@@ -6,11 +6,11 @@ body,
   flex-direction: column;
 }
 
-// [data-apos-refreshable],
-// .bp-wrapper,
-// main {
-//   flex-grow: 1;
-// }
+[data-apos-refreshable],
+.bp-wrapper,
+main {
+  flex-grow: 1;
+}
 
 body {
   min-height: 100vh;
