--- a/modules/@apostrophecms/home-page/views/page.html
+++ b/modules/@apostrophecms/home-page/views/page.html
@@ -8,7 +8,7 @@
 {% block main %}
   <section class="bp-welcome">
     <h1 class="bp-welcome__headline">
-      Welcome to ApostropheCMS
+      Welcome to ApostropheCMS, {{ data.user.title }}
     </h1>
     {% if not data.user %}
       {# Message only for logged out users. #}
