Test layout widget

--- a/modules/default-page/views/page.html
+++ b/modules/default-page/views/page.html
@@ -6,8 +6,8 @@
 {% extends "layout.html" %}
 
 {% block main %}
-  <section class="bp-content">
+  {# <section class="bp-content"> #}
     <h1>{{ data.page.title }}</h1>
     {% area data.page, 'main' %}
-  </section>
+  {# </section> #}
 {% endblock %}
