--- a/modules/default-page/views/page.html
+++ b/modules/default-page/views/page.html
@@ -6,8 +6,11 @@
 {% extends "layout.html" %}
 
 {% block main %}
-  <section class="bp-content">
-    <h1>{{ data.page.title }}</h1>
+  <h1>{{ data.page.title }}</h1>
+  <section class="bp-layout">
     {% area data.page, 'main' %}
+  </section>
+  <section class="bp-content">
+    {% area data.page, 'content' %}
   </section>
 {% endblock %}
