--- a/modules/@apostrophecms/blog-page/views/filters.html
+++ b/modules/@apostrophecms/blog-page/views/filters.html
@@ -2,6 +2,7 @@
   {% for filter in data.filters %}
     <h3>{{ filter.label }}</h3>
     <ul>
+      {{ apos.log(filter.choices) }}
       {% for choice in filter.choices %}
         <li>
           <a
